src/main/java/de/fuberlin/wiwiss/r2r/parser/TargetPatternParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g 2010-07-22 03:13:20

  package de.fuberlin.wiwiss.r2r.parser;
  
  import de.fuberlin.wiwiss.r2r.*;
  import java.util.List;
  import java.util.ArrayList;
  import java.util.Map;
  import java.util.HashMap;
  import java.util.Set;
  import java.util.HashSet;
  import com.hp.hpl.jena.util.PrintUtil;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class TargetPatternParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "VARIABLEURI", "VAR1", "VAR2", "VARIABLETERM", "LANGTAG", "INTEGER", "DECIMAL", "DOUBLE", "INTEGER_POSITIVE", "DECIMAL_POSITIVE", "DOUBLE_POSITIVE", "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", "TRUE", "FALSE", "STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", "IRI_REF", "PNAME_LN", "BLANK_NODE_LABEL", "ANON", "T", "R", "U", "E", "F", "A", "L", "S", "WS", "PN_PREFIX", "PNAME_NS", "PN_LOCAL", "VARNAME", "EXPONENT", "ECHAR", "PN_CHARS_U", "PN_CHARS_BASE", "PN_CHARS", "HEX", "COMMENT", "'.'", "'a'", "'^^'"
    };
    public static final int VARIABLEURI=4;
    public static final int IRI_REF=24;
    public static final int EXPONENT=41;
    public static final int PNAME_LN=25;
    public static final int EOF=-1;
    public static final int VARNAME=40;
    public static final int HEX=46;
    public static final int VARIABLETERM=7;
    public static final int DECIMAL_POSITIVE=13;
    public static final int DOUBLE=11;
    public static final int PN_CHARS_U=43;
    public static final int COMMENT=47;
    public static final int T__50=50;
    public static final int DOUBLE_POSITIVE=14;
    public static final int INTEGER=9;
    public static final int E=31;
    public static final int F=32;
    public static final int A=33;
    public static final int L=34;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int INTEGER_NEGATIVE=15;
    public static final int BLANK_NODE_LABEL=26;
    public static final int U=30;
    public static final int PN_LOCAL=39;
    public static final int T=28;
    public static final int PNAME_NS=38;
    public static final int S=35;
    public static final int R=29;
    public static final int TRUE=18;
    public static final int ECHAR=42;
    public static final int ANON=27;
    public static final int WS=36;
    public static final int PN_CHARS_BASE=44;
    public static final int STRING_LITERAL_LONG2=23;
    public static final int DECIMAL=10;
    public static final int VAR1=5;
    public static final int VAR2=6;
    public static final int STRING_LITERAL_LONG1=22;
    public static final int DECIMAL_NEGATIVE=16;
    public static final int INTEGER_POSITIVE=12;
    public static final int PN_PREFIX=37;
    public static final int STRING_LITERAL2=21;
    public static final int STRING_LITERAL1=20;
    public static final int PN_CHARS=45;
    public static final int DOUBLE_NEGATIVE=17;
    public static final int FALSE=19;
    public static final int LANGTAG=8;

    // delegates
    // delegators


        public TargetPatternParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TargetPatternParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return TargetPatternParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g"; }


      PrefixMapper prefixMapper;
      Set<String> variables = new HashSet<String>();
      Set<String> props = new HashSet<String>();
      Set<String> cls = new HashSet<String>();
      Map<String, String> datatypeHints = new HashMap<String, String>();
      
      public void setPrefixMapper(PrefixMapper pm) {
        prefixMapper = pm;
      }
      
      public void recover(IntStream input, RecognitionException re) {
        String hdr = getErrorHeader(re);
        String msg = getErrorMessage(re, this.getTokenNames());
        
        throw new ParseException(hdr + " " + msg);
      }
      
      public void reportError(RecognitionException re) {
        String hdr = getErrorHeader(re);
        String msg = getErrorMessage(re, this.getTokenNames());
        
        throw new ParseException(hdr + " " + msg);
      }


    public static class targetPattern_return extends ParserRuleReturnScope {
        public Set<String> variableDependencies;
        public TargetPattern pattern;
        public Set<String> classes;
        public Set<String> properties;
        public Map<String, String> hints;
    };

    // $ANTLR start "targetPattern"
    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:68:1: targetPattern returns [Set<String> variableDependencies, TargetPattern pattern, Set<String> classes, Set<String> properties, Map<String, String> hints] : first= tripleOrPath ( '.' more= tripleOrPath )* EOF ;
    public final TargetPatternParser.targetPattern_return targetPattern() throws RecognitionException {
        TargetPatternParser.targetPattern_return retval = new TargetPatternParser.targetPattern_return();
        retval.start = input.LT(1);

        List<Triple> first = null;

        List<Triple> more = null;


        try {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:69:3: (first= tripleOrPath ( '.' more= tripleOrPath )* EOF )
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:69:5: first= tripleOrPath ( '.' more= tripleOrPath )* EOF
            {
            pushFollow(FOLLOW_tripleOrPath_in_targetPattern64);
            first=tripleOrPath();

            state._fsp--;

             List<Triple> triples = first; 
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:70:5: ( '.' more= tripleOrPath )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==48) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:71:7: '.' more= tripleOrPath
            	    {
            	    match(input,48,FOLLOW_48_in_targetPattern81); 
            	    pushFollow(FOLLOW_tripleOrPath_in_targetPattern85);
            	    more=tripleOrPath();

            	    state._fsp--;

            	     triples.addAll(more); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_targetPattern114); 
             retval.pattern = new TargetPattern(triples);
                                   retval.variableDependencies = variables;
                                   retval.classes = cls;
                                   retval.properties = props;
                                   retval.hints = datatypeHints;
                                 

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "targetPattern"


    // $ANTLR start "tripleOrPath"
    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:83:1: tripleOrPath returns [List<Triple> value] : ( | s= subject v= verb (s= subject v= verb )* o= object );
    public final List<Triple> tripleOrPath() throws RecognitionException {
        List<Triple> value = null;

        TripleElement s = null;

        TripleElement v = null;

        TripleElement o = null;


        try {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:84:3: ( | s= subject v= verb (s= subject v= verb )* o= object )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==EOF||LA3_0==48) ) {
                alt3=1;
            }
            else if ( ((LA3_0>=VARIABLEURI && LA3_0<=VAR2)||(LA3_0>=IRI_REF && LA3_0<=ANON)) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:85:5: 
                    {
                    }
                    break;
                case 2 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:85:7: s= subject v= verb (s= subject v= verb )* o= object
                    {
                     List<Triple> triples = null;
                    pushFollow(FOLLOW_subject_in_tripleOrPath153);
                    s=subject();

                    state._fsp--;

                    pushFollow(FOLLOW_verb_in_tripleOrPath157);
                    v=verb();

                    state._fsp--;

                      triples = new ArrayList<Triple>();
                                              TripleElement sElement = s;
                                              TripleElement vElement = v;
                                              props.add(vElement.getValue(0));
                                           
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:91:7: (s= subject v= verb )*
                    loop2:
                    do {
                        int alt2=2;
                        alt2 = dfa2.predict(input);
                        switch (alt2) {
                    	case 1 :
                    	    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:91:8: s= subject v= verb
                    	    {
                    	    pushFollow(FOLLOW_subject_in_tripleOrPath170);
                    	    s=subject();

                    	    state._fsp--;

                    	    pushFollow(FOLLOW_verb_in_tripleOrPath174);
                    	    v=verb();

                    	    state._fsp--;


                    	                              TripleElement oElement = s;
                    	                              triples.add(new Triple(sElement, vElement, oElement, vElement.getValue(0), null));
                    	                              sElement = oElement;
                    	                              vElement = v;
                    	                              props.add(vElement.getValue(0));
                    	                            

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);

                    pushFollow(FOLLOW_object_in_tripleOrPath195);
                    o=object();

                    state._fsp--;


                                     String property = vElement.getValue(0);
                                     String classURI = null; 
                                     if(property.equals("http://www.w3.org/1999/02/22-rdf-syntax-ns#type")) {
                                       cls.add(o.getValue(0));
                                       classURI = o.getValue(0);
                                     }

                                     triples.add(new Triple(sElement, vElement, o, property, classURI));
                                     value = triples;
                                   

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "tripleOrPath"


    // $ANTLR start "subject"
    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:124:1: subject returns [TripleElement value] : ( varOrIriRefOrBlankNode | VARIABLEURI );
    public final TripleElement subject() throws RecognitionException {
        TripleElement value = null;

        Token VARIABLEURI2=null;
        TripleElement varOrIriRefOrBlankNode1 = null;


        try {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:125:3: ( varOrIriRefOrBlankNode | VARIABLEURI )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=VAR1 && LA4_0<=VAR2)||(LA4_0>=IRI_REF && LA4_0<=ANON)) ) {
                alt4=1;
            }
            else if ( (LA4_0==VARIABLEURI) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:125:5: varOrIriRefOrBlankNode
                    {
                    pushFollow(FOLLOW_varOrIriRefOrBlankNode_in_subject231);
                    varOrIriRefOrBlankNode1=varOrIriRefOrBlankNode();

                    state._fsp--;

                    value = varOrIriRefOrBlankNode1;

                    }
                    break;
                case 2 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:126:5: VARIABLEURI
                    {
                    VARIABLEURI2=(Token)match(input,VARIABLEURI,FOLLOW_VARIABLEURI_in_subject239); 

                          String v = (VARIABLEURI2!=null?VARIABLEURI2.getText():null);
                          v = v.substring(2, v.length()-1); 
                          value = new TripleElement(TripleElement.Type.IRIVARIABLE, v); 
                          variables.add(v);
                        

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "subject"


    // $ANTLR start "verb"
    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:135:1: verb returns [TripleElement value] : ( iriRef | 'a' );
    public final TripleElement verb() throws RecognitionException {
        TripleElement value = null;

        String iriRef3 = null;


        try {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:136:3: ( iriRef | 'a' )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=IRI_REF && LA5_0<=PNAME_LN)) ) {
                alt5=1;
            }
            else if ( (LA5_0==49) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:136:5: iriRef
                    {
                    pushFollow(FOLLOW_iriRef_in_verb264);
                    iriRef3=iriRef();

                    state._fsp--;

                     value = new TripleElement(TripleElement.Type.IRI, iriRef3); 

                    }
                    break;
                case 2 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:137:5: 'a'
                    {
                    match(input,49,FOLLOW_49_in_verb272); 
                     value = new TripleElement(TripleElement.Type.IRI, PrintUtil.expandQname("rdf:type")); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "verb"


    // $ANTLR start "object"
    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:140:1: object returns [TripleElement value] : ( varOrTerm | VARIABLEURI );
    public final TripleElement object() throws RecognitionException {
        TripleElement value = null;

        Token VARIABLEURI5=null;
        TripleElement varOrTerm4 = null;


        try {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:141:3: ( varOrTerm | VARIABLEURI )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=VAR1 && LA6_0<=VARIABLETERM)||(LA6_0>=INTEGER && LA6_0<=ANON)) ) {
                alt6=1;
            }
            else if ( (LA6_0==VARIABLEURI) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:141:5: varOrTerm
                    {
                    pushFollow(FOLLOW_varOrTerm_in_object293);
                    varOrTerm4=varOrTerm();

                    state._fsp--;

                     value = varOrTerm4; 

                    }
                    break;
                case 2 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:142:5: VARIABLEURI
                    {
                    VARIABLEURI5=(Token)match(input,VARIABLEURI,FOLLOW_VARIABLEURI_in_object301); 
                     String v = (VARIABLEURI5!=null?VARIABLEURI5.getText():null);
                          v = v.substring(2, v.length()-1); 
                          value = new TripleElement(TripleElement.Type.IRIVARIABLE, v);
                          variables.add(v);
                        

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "object"


    // $ANTLR start "varOrTerm"
    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:150:1: varOrTerm returns [TripleElement value] : ( var | graphTerm );
    public final TripleElement varOrTerm() throws RecognitionException {
        TripleElement value = null;

        TripleElement var6 = null;

        TripleElement graphTerm7 = null;


        try {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:151:3: ( var | graphTerm )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( ((LA7_0>=VAR1 && LA7_0<=VAR2)) ) {
                alt7=1;
            }
            else if ( (LA7_0==VARIABLETERM||(LA7_0>=INTEGER && LA7_0<=ANON)) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:151:5: var
                    {
                    pushFollow(FOLLOW_var_in_varOrTerm326);
                    var6=var();

                    state._fsp--;

                     value = var6; 

                    }
                    break;
                case 2 :
                    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:152:5: graphTerm
                    {
                    pushFollow(FOLLOW_graphTerm_in_varOrTerm334);
                    graphTerm7=graphTerm();

                    state._fsp--;

                     value = graphTerm7; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "varOrTerm"


    // $ANTLR start "varOrIriRefOrBlankNode"
    // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:155:1: varOrIriRefOrBlankNode returns [TripleElement value] : ( var | iriRef | blankNode );
    public final TripleElement varOrIriRefOrBlankNode() throws RecognitionException {
        TripleElement value = null;

        TripleElement var8 = null;

        String iriRef9 = null;

        TripleElement blankNode10 = null;


        try {
            // D:\\code\\DA\\dev\\mapping\\trunk\\r2rApi\\antlr-files\\TargetPattern.g:156:3: ( var | iriRef | blankNode )
            int alt8=3;
            switch ( input.LA(1) ) {
            case VAR1:
            case VAR2:
                {
                alt8=1;
                }
                break;
            case IRI_REF:
            case PNAME_LN:
                {
                alt8=2;
                }
                break;
            case BLANK_NODE_LABEL:
            case ANON:
                {
                alt8=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

